2004-08-25 Niklas Knutsson  <nq@altern.org>

	* data collection -> data set
	* Complete data set GUI

2004-08-24 Niklas Knutsson  <nq@altern.org>

	* Complete most of the data collection stuff
	* Move elements to data collection format

2004-08-23 Niklas Knutsson  <nq@altern.org>

	* Fix diff() with variables and functions that contains x
	* Simple integration

2004-08-22 Niklas Knutsson  <nq@altern.org>

	* ans2, ans3, ans4 and ans5
	* google/googleplex -> googol/googolplex
	* thousand and hundred
	* Reduce min result area height
	* Put angle mode in evalution options
	* Status text
	* Save to image
	* Initial work on data collection concept

2004-08-20 Niklas Knutsson  <nq@altern.org>

	* Fix RPN mode
	* include errno.h

2004-08-16 Niklas Knutsson  <nq@altern.org>

	* Remove giac arguments
	* Update documentation

2004-08-15 Niklas Knutsson  <nq@altern.org>

	* Fix prefix selection when first positive/negative exponent prefix
	* No prefix in result prefix menu
	* Only left parenthesis where added around vector!
	* Make the title for mils more descriptive
	* FIx matrix multiplication

2004-08-14 Niklas Knutsson  <nq@altern.org>

	* Make no comparison to solve error message more informative
	* Do not factorize if factor is not non-zero
	* Fix prefix selection with negative exponent prefixes
	* Fix prefix selection with denominator prefix enabled

2004-08-13 Niklas Knutsson  <nq@altern.org>

	* Fix concatenate()
	* Add localized full name to ans variable
	* Make sure that completion pops down when going back in history
	* Set minimum arguments to 1 for mergevectors()

2004-08-12 Niklas Knutsson  <nq@altern.org>

	* Fix derangements() which was broken due to changed interpretation of -1^x
	* CALCULATOR->u_rad was null
	* True and False variables
	* "yes" -> "Yes" and "no" -> "No"
	* Localize "True" and "False" radio buttons
	* Add *.xml.in files to the dist tar sources
	* Complete exp1 in "2+5exp1"
	* Add undefined variable