@@ -41,6 +41,7 @@ src/calclib/util.cc
 src/calclib/data/datasets.xml.in
 src/calclib/data/elements.xml.in
 src/calclib/data/functions.xml.in
+src/calclib/data/planets.xml.in
 src/calclib/data/prefixes.xml.in
 src/calclib/data/units.xml.in
 src/calclib/data/variables.xml.in
