@@ -1,0 +1,121 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<QALCULATE version="0.6.4">
+  <object>
+    <name>Earth</name>
+    <year>365.25696</year>
+    <speed>29.7859</speed>
+    <eccentricity>0.01671022</eccentricity>
+    <inclination>0.00005</inclination>
+    <satellites>1</satellites>
+    <mass>5.9737E24</mass>
+    <density>5.515</density>
+    <area>510.0657E6</area>
+    <gravity>9.766</gravity>
+    <temperature>287</temperature>
+  </object>
+  <object>
+    <name>Mars</name>
+    <year>686.9601</year>
+    <speed>24.1309</speed>
+    <eccentricity>0.09341233</eccentricity>
+    <inclination>1.85061</inclination>
+    <satellites>2</satellites>
+    <mass>6.4191E23</mass>
+    <density>3.94</density>
+    <area>1.44E8</area>
+    <gravity>3.71</gravity>
+    <temperature>210</temperature>
+  </object>
+  <object>
+    <name>Mercury</name>
+    <name xml:lang="sv">Kvicksilver</name>
+    <year>87.96935</year>
+    <speed>47.8725</speed>
+    <eccentricity>0.20563069</eccentricity>
+    <inclination>7.00487</inclination>
+    <satellites />
+    <mass>3.302E23</mass>
+    <density>5.43</density>
+    <area>7.5E7</area>
+    <gravity>3.70</gravity>
+    <temperature>440</temperature>
+  </object>
+  <object>
+    <name>Venus</name>
+    <year>224.70096</year>
+    <speed>35.0214</speed>
+    <eccentricity>0.00677323</eccentricity>
+    <inclination>3.39471</inclination>
+    <satellites />
+    <mass>4.869E24</mass>
+    <density>5.24</density>
+    <area>4.60E8</area>
+    <gravity>8.87</gravity>
+    <temperature>737</temperature>
+  </object>
+  <object>
+    <name>Jupiter</name>
+    <year>4335.3545</year>
+    <speed>13.0697</speed>
+    <eccentricity>0.04839266</eccentricity>
+    <inclination>1.30530</inclination>
+    <satellites>63</satellites>
+    <mass>1.899E27</mass>
+    <density>1.33</density>
+    <area>6.41E10</area>
+    <gravity>23.12</gravity>
+    <temperature>152</temperature>
+  </object>
+  <object>
+    <name>Saturn</name>
+    <year>10757.7365</year>
+    <speed>9.6724</speed>
+    <eccentricity>0.05415060</eccentricity>
+    <inclination>2.48446</inclination>
+    <satellites>33</satellites>
+    <mass>5.688E26</mass>
+    <density>0.69</density>
+    <area>4.38E10</area>
+    <gravity>8.96</gravity>
+    <temperature>143</temperature>
+  </object>
+  <object>
+    <name>Neptune</name>
+    <year>60224.9036</year>
+    <speed>5.4778</speed>
+    <eccentricity>0.00858587</eccentricity>
+    <inclination>1.76917</inclination>
+    <satellites>13</satellites>
+    <mass>1.024E26</mass>
+    <density>1.64</density>
+    <area>7.65E9</area>
+    <gravity>11.0</gravity>
+    <temperature>53</temperature>
+  </object>
+  <object>
+    <name>Pluto</name>
+    <year>90613.3058</year>
+    <speed>4.7490</speed>
+    <eccentricity>0.24880766</eccentricity>
+    <inclination>17.14175</inclination>
+    <satellites>1</satellites>
+    <mass>1.290E22</mass>
+    <density>2.05</density>
+    <area>1.7E7</area>
+    <gravity>0.6</gravity>
+    <temperature>44</temperature>
+  </object>
+  <object>
+    <name>Uranus</name>
+    <year>30708.1600</year>
+    <speed>6.8352</speed>
+    <eccentricity>0.04716771</eccentricity>
+    <inclination>0.76986</inclination>
+    <satellites>27</satellites>
+    <mass>8.686E25</mass>
+    <density>1.29</density>
+    <area>8.13E9</area>
+    <gravity>8.69</gravity>
+    <temperature>68</temperature>
+  </object>
+</QALCULATE>
