@@ -1,3 +1,11 @@
+2004-08-26 Niklas Knutsson  <nq@altern.org>
+
+	* Planets data set
+	* Day and Julian Year
+	* Fix set icon
+	* Do not always make Calculator message window transient for main window
+	* Save and load accel map
+
 2004-08-25 Niklas Knutsson  <nq@altern.org>
 
 	* data collection -> data set
